--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
+    "start": "tsc --watch",
     "build": "tsc",
     "prepublish": "tsc"
   },
