--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eraswap-sdk",
-  "version": "1.0.0",
-  "description": "Typechain outputs of esn-contracts and utils",
+  "version": "1.0.0-commit.65cb61ed",
+  "description": "Typechain outputs of esn-contracts and utils. Commit tag of KMPARDS/esn-contracts is included in the version.",
   "main": "dist/",
   "author": "github.com/zemse",
   "license": "MIT",
