--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "license": "MIT",
   "private": false,
   "scripts": {
+    "build": "tsc && yarn copy-dts",
+    "copy-dts": "copyfiles -u 1 \"src/**/*.d.ts\" dist",
     "start": "tsc --watch",
-    "build": "tsc",
     "prepublish": "tsc"
   },
   "dependencies": {
@@ -16,6 +17,7 @@
     "ethers": "^5.0.14"
   },
   "devDependencies": {
+    "copyfiles": "^2.4.0",
     "typescript": "^4.0.3"
   },
   "peerDependencies": {
